Terraform_aws/IGW.tf
##########  INTERNET GATEWAY FOR VPC_1  ####################################################################

#resource "aws_internet_gateway" "VPC_1_IGW" {
# vpc_id = aws_vpc.vpc-03f80d508570a6397.id
#}
